--- a/app/loja/templates/loja/base.html
+++ b/app/loja/templates/loja/base.html
@@ -7,7 +7,8 @@
     <title>{% block title %}{{ title if title else 'M4 Tática | Armas, Munições e Acessórios' }}{% endblock %}</title>
     <meta name="description" content="{% block meta_description %}{{ meta_desc if meta_desc else 'A maior variedade de armas e munições com a qualidade M4 Tática.' }}{% endblock %}">
     <link rel="canonical" href="{{ request.url }}">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon-loja.png') }}" type="image/png">
+    <link rel="icon" href="{{ url_for('static', filename='img/favicon-loja.png') }}" type="image/png">
 
     <!-- Local Google Fonts -->
     <link href="{{ url_for('static', filename='vendor/googlefonts/fonts.css') }}" rel="stylesheet">
